# TUC

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  TUC_MASTER_PLAN.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: ARCHITECTURE.md  BACKEND_API.md  BACKEND_AUTHOR_CERTIFICATION.md  BACKEND_AUTHOR_EVIDENCE_GATE.md  BACKEND_AUTHOR_READINESS.md  BACKEND_CAPABILITY_SCHEMA.md  BACKEND_CONFORMANCE.md  BACKEND_REGISTRY.md  BENCHMARKING.md  BENCHMARK_ARTIFACT_MANIFEST.md  BENCHMARK_METHODOLOGY_REPORT.md  BRANCH_PROTECTION.md  BREAK_EVEN_WORKLOAD_SIZE_REPORT.md  COMPILER_DECISION_REPORT.md  COMPILER_THREAT_MODEL.md  DATA_MOVEMENT_IR.md  DEVELOPMENT_ENVIRONMENT.md  EXECUTABLE_BACKEND_SECURITY_REVIEW_REPORT.md  FOUNDATIONAL_RESEARCH.md  FRONTEND_ADAPTER.md  GOLDEN_KERNELS.md  HAC_IR_DIALECT.md  HAC_IR_NEUTRALITY.md  HAC_IR_SEMANTIC_CHARTER.md  HS_IR_DIALECT.md  LEAKY_ABSTRACTION_REPORT.md  MANIFEST_CLAIM_REVIEW.md  MLIR_DESIGN_SPIKE.md  MVP.md  MVP_KERNELS.md  NATIVE_BASELINE_COMPARISON_REPORT.md  NATIVE_BASELINE_PROVENANCE.md  OPEN_QUESTIONS.md  PERFORMANCE_ACCEPTANCE_CRITERIA_REPORT.md  PERFORMANCE_CLAIM_THRESHOLD_POLICY_REPORT.md  PERFORMANCE_PROOF_BOUNDARY.md  PERFORMANCE_PROOF_READINESS.md  PERFORMANCE_PROOF_RFC_REPORT.md  PHASE_0.md  PLANNER_OVERHEAD_REPORT.md  (+72 more)
examples/: backend_api_v0.py  backend_author_evidence_gate.py  backend_author_readiness.py  backend_registry.py  benchmark_artifact_manifest.py  benchmark_methodology_report.py  break_even_workload_size_report.py  data_movement_ir.py  executable_backend_security_review_report.py  external_backend_author_path.py  leaky_abstraction_report.py  manifest_claim_review.py  native_baseline_comparison_report.py  native_baseline_provenance.py  performance_acceptance_criteria_report.py  performance_claim_threshold_policy_report.py  performance_proof_readiness.py  performance_proof_rfc_report.py  phase0_vertical_slice.py  phase1_ir_pipeline.py  planner_overhead_report.py  proof_of_abstraction.py  proof_of_execution.py  proof_of_reduction.py  proof_of_softmax.py  proof_of_systolic_execution.py  runtime_allocation_plan.py  runtime_allocation_request_manifest.py  runtime_backend_equivalence.py  runtime_backend_equivalence_portfolio.py  (+52 more)
(+590 files in other folders)
