[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuc"
version = "0.1.0"
description = "Experimental Triton Universal Compiler prototype."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "TUC contributors" }
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Compilers"
]
dependencies = [
  "numpy>=1.26"
]

[project.urls]
Homepage = "https://github.com/kirchherr/TUC"
Repository = "https://github.com/kirchherr/TUC"
Issues = "https://github.com/kirchherr/TUC/issues"

[project.optional-dependencies]
dev = [
  "build",
  "hypothesis",
  "mypy",
  "pytest",
  "pytest-xdist",
  "ruff"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
packages = ["tuc"]
